# daemonize-me

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-BSD  README.md  SECURITY.md  example.pid  ffi.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: example-lingering.rs  example.rs  name_set.rs
src/: daemon.rs  ffi.rs  group.rs  lib.rs  process.rs  stdio.rs  user.rs
