[package]
name = "daemonize-me"
version = "1.0.2"
authors = ["Matheus Xavier <m.xavier@ieee.org>"]
edition = "2018"
license = "BSD-3-Clause/Apache-2.0"
repository = "https://github.com/CardinalBytes/daemonize-me"
description = "Rust library to ease the task of creating daemons on unix-like systems"
readme = "README.md"
keywords = ["daemon", "daemonize", "daemonize-me", "unix"]
categories = ["os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.17"
snafu = "0.6.8"
